--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/joelyjoel/mfcc#readme",
   "dependencies": {
+    "dct": "^0.1.0",
     "ts-dsp": "^1.0.0"
   }
 }
