--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Calculate MFCC (Mel-frequency Cepstral Coefficients) from mic input in the browser. (TypeScript) ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,11 @@
     "audiobuffer": "^0.2.0",
     "dct": "^0.1.0",
     "fft.js": "^4.0.3"
+  },
+  "devDependencies": {
+    "ts-loader": "^6.1.2",
+    "typescript": "^3.6.3",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   }
 }
